# splashe-22-expressions-java

./: README.md
antlr-grammar-analyzer/: .gitignore  BUILD  README.md  WORKSPACE
antlr-grammar-analyzer/resources/: AllRulesWithoutExpr.java  C.java  java9_annotations.txt  java9_expressions.txt
antlr-grammar-analyzer/resources/java9/: Java9Lexer.java  Java9Parser.interp  Java9Parser.java  Java9ParserBaseListener.java  Java9ParserListener.java
antlr-grammar-analyzer/resources/java9/.antlr/: Java9Lexer.java  (+1 more)
antlr-grammar-analyzer/src/: BUILD  FitsWithinGrammar.java  Main.java  NoExprGrammar.java  Utils.java
expression-service/: .bazelignore  .bazelproject  .gitignore  BUILD  README.md  WORKSPACE  shell.nix
expression-service/.github/workflows/: bazel.yml
expression-service/docs/: build-run.md  code-quality.md
expression-service/tools/: BUILD  README.md  build-executable.sh  checkstyle-java-google.xml  coverage.sh  dependency-graph.sh  init_stats_db.sh  intellij-scheme-codestyle.xml  pmd-java.xml
expression-service/tools/antlr/: BUILD  antlr.bzl
expression-service/tools/checkstyle/: BUILD  checkstyle.bzl
expression-service/tools/pmd/: BUILD  pmd.bzl
expression-stats/: .gitignore  README.md  demo.sqlite3  example.env  init_queries.sql  pyproject.toml
expression-stats/expression_stats/: analysis_queries.py  blackbox.py  expr_constructs.py  main.py  visualizations.py
expression-stats/sources_demo/calc/: Calculator.java  LazyCalculator.java
expression-stats/sources_demo/hello/: Hello.java
expression-stats/tests/: test_analysis_queries.py
(+106 files in other folders)
